2008-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>
		Michael South <msouth@msouth.org>

	PR 1344/bsps
	* configure.ac, clock/ckinit.c, timer/timer.c: Add use of TSC for
	nanoseconds granularity. i8254 is very slow on some systems. TSC use
	is auto-detected by default.

2008-12-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/bspgetworkarea.c: Remove debug prints.

2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspgetworkarea.c: Fix botched edit.

2008-10-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/bspgetworkarea.c: Change size_t to ssize_t on
	bsp_get_work_area(). On 16-bit architectures, size_t can be 16-bits
	which would limit the work area to 64K.

2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Turn = into +=.

2008-10-01	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.

2008-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* clock/ckinit.c: include "../../../shared/clockdrv_shell.h".
	* Makefile.am: Reflect changes above.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate *_SOURCES.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Move noinst_LIBRARIES = libbsp.a before its
	components.

2008-09-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Cleanup ../../shared/include/bootcard.h handling.

2008-09-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Cosmetics.

2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Make letting boot_card() handle work area allocation
	mandatory. Rename RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION to
	BSP_BOOTCARD_OPTIONS.

2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/bspclean.c: Removed.

2008-09-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/bspreset.c: New file.

2008-09-22	Joel Sherrill <joel.sherrill@oarcorp.com>
